some Java 17 simplifications